# ai-writing-platform

./: .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  CODEBUDDY.md  DIRECTORY.md  LICENSE  README.md  index.html  optimization_plan.md  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.codebuddy/skills/version-release/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-pages.yml  deploy-wiki.yml  release.yml
agent/: .gitignore  __init__.py  config.py  main.py  pyproject.toml  requirements.txt  tracer.py
agent/memory/: __init__.py  retriever.py  store.py  summarizer.py
agent/models/: __init__.py  router.py
agent/server/: __init__.py  routes.py  sse.py
agent/skills/: __init__.py  engine.py  prompts.py
agent/tools/: __init__.py  db_tools.py
data/: agent_memory.db  agent_memory.db-shm  agent_memory.db-wal
docs/: AI-architecture.md  CHANGELOG.md  DEBUGGING.md  FAQ.md  Home.md  PROJECT_STRUCTURE.md  _Footer.md  _Sidebar.md  深度优化分析报告.md
docs/architecture/: AI-architecture.md  overview.md
docs/development/: contributing.md  debug-console.md  github-integration.md  plugin-system.md  project-structure.md  state-management.md  tech-stack.md
docs/features/: ai-assistant-analysis.md  feature-list.md
docs/user-guide/: ai-assistant.md  chapter-editing.md  focus-mode.md  import-export.md  library-management.md  personalization.md  quick-start.md  version-management.md  worldbuilding.md
product/: landing-page.html
product/css/: landing-page.css
product/js/: landing-page.js
scripts/: check-npm-versions.ts  check-python-versions.ts  check-rust-versions.ts  check-versions.ts  check.mjs  clean.ts  gen_iconset.py  node-manager.ts  setup-agent.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  utils.rs
src-tauri/src/commands/: ai.rs  book.rs  chapter.rs  image.rs  io.rs  mod.rs  snapshot.rs  system_check.rs  volume.rs  window.rs  world_card.rs
src-tauri/src/commands/agent/: mod.rs  skills.rs
src-tauri/src/commands/ai/: chat.rs  embedding.rs  mod.rs  summarize.rs  test.rs
src-tauri/src/commands/io/: backup.rs  crypto.rs  export.rs  import_txt.rs  mod.rs
src-tauri/src/commands/window/: debug.rs  manager.rs  mod.rs  validate.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/models/: mod.rs
src-tauri/src/python/: bridge.rs  client.rs  manager.rs  mod.rs
src-tauri/src/repository/: book_repo.rs  chapter_repo.rs  embedding_repo.rs  mod.rs  snapshot_repo.rs  volume_repo.rs  world_card_repo.rs
src-tauri/src/service/: book_service.rs  chapter_service.rs  mod.rs  search_service.rs  snapshot_service.rs  volume_service.rs  world_card_service.rs
src/components/: ErrorBoundary.tsx
src/components/agent/: AgentMemoryPanel.tsx  (+5 more)
src/hooks/: useAppVersion.ts  useConsoleInterceptor.ts  useResizeHandle.ts  useThemeFontInit.ts
src/lib/: image-utils.ts  tauri-bridge.ts  toast.ts  utils.ts
src/pages/: EditorPage.tsx  LibraryPage.tsx  SettingsPage.tsx
src/plugins/: PluginManager.ts  index.ts  types.ts
src/router/: index.tsx
src/stores/: aiSlice.ts  appStore.ts  appTypes.ts  booksSlice.ts  pluginStore.ts  preferencesSlice.ts  uiAtoms.ts
src/styles/: AgentPanel.css  base.css  globals.css  markdown.css  theme.css  tiptap.css
src/types/: index.ts
(+66 files in other folders)
